4: implemented the game methods for ServerFacade and fixed depricated URL statement